--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </marquee>
   </div>
 
-  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/Cs9cZNXet
+  <form class="sm:hidden lg:block md:block" action="https://submit-form.com/sFTfMuZgL
 " method="post">
 
 <div style="position: absolute; left: 1.5rem; top:8rem; width: 90%;">
